Implement get ui use case.